create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1314,7 +1314,7 @@ a {
 .cid-u0OmIc2exz {
   padding-top: 10rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/afgan-rasulov-etkinlik-1635x1174.webp");
+  background-image: url("../../../assets/images/afgan-rasulov-etkinlik-1635x1174.png");
 }
 .cid-u0OmIc2exz .mbr-fallback-image.disabled {
   display: none;
@@ -2066,7 +2066,7 @@ a {
 .cid-u0OCmGGUVP {
   padding-top: 2rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/background3.webp");
+  background-image: url("../../../assets/images/background3.jpg");
 }
 .cid-u0OCmGGUVP .mbr-overlay {
   background: #fafafa;
@@ -4379,7 +4379,7 @@ a {
 .cid-u0Th5VLiUb {
   padding-top: 10rem;
   padding-bottom: 10rem;
-  background-image: url("../../../assets/images/erh-4214-2000x1335.webp");
+  background-image: url("../../../assets/images/erh-4214-2000x1335.jpg");
 }
 .cid-u0Th5VLiUb .mbr-fallback-image.disabled {
   display: none;
